# kserver

./: .gitignore  Cargo.toml  Dockerfile
.github/workflow/: build.yaml
.github/workflows/: build.yml
src/: main.rs
src/helper/: db.rs  db_error.rs  db_helper.rs  mod.rs
src/model/: mod.rs  request.rs
src/router/: anime.rs  anime_router.rs  mod.rs
